welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: illegal start of simple expression
while(nbpas>dejafait)){
                     ^